[gd_scene load_steps=3 format=3 uid="uid://b2ihtbgfe0r4a"]

[ext_resource type="Theme" uid="uid://3t61g0061mea" path="res://assets/theme.tres" id="1_vedio"]
[ext_resource type="Script" path="res://scenes/main/region_preview/region_preview.gd" id="2_qq11b"]

[node name="RegionPreview" type="PanelContainer"]
theme = ExtResource("1_vedio")
script = ExtResource("2_qq11b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PreviewLines" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Total"

[node name="TotalQty" type="Label" parent="VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
text = "76"

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "Power"

[node name="TotalPower" type="Label" parent="VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
text = "192-305"
